// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuMobile styles renders HamburgerWrapper correctly 1`] = `
.c0 {
  display: none;
}

.c0 svg {
  position: relative;
  height: 2em;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: -webkit-transform 400ms;
  -webkit-transition: transform 400ms;
  transition: transform 400ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 20;
}

.c0 svg .line {
  fill: none;
  -webkit-transition: stroke-dasharray 400ms,stroke-dashoffset 400ms;
  transition: stroke-dasharray 400ms,stroke-dashoffset 400ms;
  stroke: currentColor;
  stroke-width: 5.5;
  stroke-linecap: round;
}

.c0 svg .top {
  stroke-dasharray: 40 172;
}

.c0 svg .middle {
  stroke-dasharray: 40 111;
}

.c0 svg .bottom {
  stroke-dasharray: 40 172;
}

.c0 svg .top {
  stroke-dashoffset: -132px;
}

.c0 svg .middle {
  stroke-dashoffset: -71px;
}

.c0 svg .bottom {
  stroke-dashoffset: -132px;
}

@media (max-width:768px) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
/>
`;

exports[`MenuMobile styles renders HamburgerWrapper correctly 2`] = `
.c0 {
  display: none;
}

.c0 svg {
  position: relative;
  height: 2em;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: -webkit-transform 400ms;
  -webkit-transition: transform 400ms;
  transition: transform 400ms;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 20;
}

.c0 svg .line {
  fill: none;
  -webkit-transition: stroke-dasharray 400ms,stroke-dashoffset 400ms;
  transition: stroke-dasharray 400ms,stroke-dashoffset 400ms;
  stroke: currentColor;
  stroke-width: 5.5;
  stroke-linecap: round;
}

.c0 svg .top {
  stroke-dasharray: 40 172;
}

.c0 svg .middle {
  stroke-dasharray: 40 111;
}

.c0 svg .bottom {
  stroke-dasharray: 40 172;
}

@media (max-width:768px) {
  .c0 {
    display: block;
  }
}

<div
  class="c0"
/>
`;

exports[`MenuMobile styles renders LinkWrapper correctly 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 28px;
  width: 100%;
  -webkit-transition: opacity 0.25s ease-in-out;
  transition: opacity 0.25s ease-in-out;
}

.c0 span {
  text-align: left;
  display: block;
  color: #232946;
}

.c0 a {
  display: inline-block;
  position: relative;
  padding: 15px 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  class="c0"
/>
`;

exports[`MenuMobile styles renders MenuMobileContainer correctly 1`] = `
.c0 {
  display: none;
  width: 100%;
  height: 100vh;
  height: calc(var(--vh,1vh) * 100);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  overflow: hidden;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  background-color: #fffffe;
  opacity: 0.9;
  z-index: 15;
}

.dark-mode .c0 {
  background-color: #232946;
}

.dark-mode .c0 span {
  color: #fffffe;
}

.c0 svg {
  opacity: 1;
  -webkit-transition: 700ms;
  transition: 700ms;
}

@media (max-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    -webkit-box-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
  }

  .c0 div:nth-child(2) {
    display: block !important;
  }
}

@media (prefers-reduced-motion:no-preference) {
  .c0 {
    -webkit-transition: opacity 500ms;
    transition: opacity 500ms;
  }
}

<div
  class="c0"
/>
`;

exports[`MenuMobile styles renders MenuMobileContainer correctly 2`] = `
.c0 {
  display: none;
  width: 100%;
  height: 100vh;
  height: calc(var(--vh,1vh) * 100);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  overflow: hidden;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  background-color: #fffffe;
  opacity: 0;
  z-index: 0;
}

.dark-mode .c0 {
  background-color: #232946;
}

.dark-mode .c0 span {
  color: #fffffe;
}

.c0 svg {
  opacity: 0;
  -webkit-transition: 700ms;
  transition: 700ms;
}

@media (max-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: baseline;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    -webkit-box-pack: space-evenly;
    -webkit-justify-content: space-evenly;
    -ms-flex-pack: space-evenly;
    justify-content: space-evenly;
  }

  .c0 div:nth-child(2) {
    display: block !important;
  }
}

@media (prefers-reduced-motion:no-preference) {
  .c0 {
    -webkit-transition: opacity 500ms;
    transition: opacity 500ms;
  }
}

<div
  class="c0"
/>
`;
